intel/bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/log.txt
bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main.c:20:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register int t1, t2, t3, t4, t5, t6, t7, t8;
    ^~~~~~~~~
bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main.c:20:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register int t1, t2, t3, t4, t5, t6, t7, t8;
    ^~~~~~~~~
bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main.c:20:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register int t1, t2, t3, t4, t5, t6, t7, t8;
    ^~~~~~~~~
bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main.c:20:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register int t1, t2, t3, t4, t5, t6, t7, t8;
    ^~~~~~~~~
bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main.c:20:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register int t1, t2, t3, t4, t5, t6, t7, t8;
    ^~~~~~~~~
bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main.c:20:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register int t1, t2, t3, t4, t5, t6, t7, t8;
    ^~~~~~~~~
bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main.c:20:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register int t1, t2, t3, t4, t5, t6, t7, t8;
    ^~~~~~~~~
bench_214/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main/extr_.FFmpeglibavcodecvc1dsp.c_vc1_inv_trans_8x8_c_with_main.c:20:5: warning: 'register' storage class specifier is deprecated and incompatible with C++17 [-Wdeprecated-register]
    register int t1, t2, t3, t4, t5, t6, t7, t8;
    ^~~~~~~~~
8 warnings and 1 error generated.
HLS FPGA Parse FAILED.
